styles/index.css
/* ... */
th, thead, tfoot, thead tr, tfoot tr, tbody tr:nth-child(even)
  { background: ButtonFace }

a {
  display: inline;
  cursor: pointer;
  padding: 0.303ch 0.6182ch;
  -webkit-box-decoration-break: clone;
          box-decoration-break: clone;
}
a[rel=search]
  { cursor: help }
abbr[title]
  { cursor: help }
a[href='#'][title^=Top] {
  display: block;
  width: fit-content;
  text-decoration: none;
  margin: var(--p-margin) auto;
  padding: 1ch var(--line-height);
}
address a {
  display: unset;
}
li > a {
  vertical-align: top;
  display: inline-block;
}
details summary {
  cursor: s-resize;
}
details details summary {
  z-index: 10
}
details[open] summary
  { cursor: n-resize }
details[open] > summary a {
  border-block-end: calc( 0.1 * var(--GOLDEN-RATIO) * 1em) solid;
}

/* PWA RELATED */
/* https://caniuse.com/user-select-none */
/* TODO: Use @supports - https://developer.mozilla.org/en-US/docs/Web/CSS/@supports */
/* https://developer.apple.com/library/archive/documentation/AppleApplications/Conceptual/SafariJSProgTopics/DragAndDrop.html#//apple_ref/doc/uid/30001233-178644 */
html, body {
  -webkit-tap-highlight-color: transparent; /* https://davidwalsh.name/mobile-highlight-color */
  -webkit-touch-callout:       none; /* Safari Touch - https://developer.mozilla.org/en-US/docs/Web/CSS/-webkit-touch-callout */
  -webkit-user-drag:           none; /* https://stackoverflow.com/questions/15034842/what-is-the-webkit-user-drag-css-property */
  -webkit-user-select:         none; /* Webkit (Chrome all / Safari all) */
          user-select:         none; /* https://caniuse.com/user-select-none */
}
iframe, pre, table, select[multiple] {
  /*
    - https://css-tricks.com/almanac/properties/s/scrollbar-gutter
    - https://developer.mozilla.org/en-US/docs/Web/CSS/scrollbar-gutter
    - https://bram.us/2021/07/23/prevent-unwanted-layout-shifts-caused-by-scrollbars-with-the-scrollbar-gutter-css-property
  */
  scrollbar-gutter: stable both-edges;
 }

pre, pre code, var, data, p, cite, blockquote, address
/* ... and all id-entifiable headers ... */
, header[id], h1[id], h2[id], h3[id], h4[id], h5[id], h6[id] {
  -webkit-tap-highlight-color: HighlightText; /* https://davidwalsh.name/mobile-highlight-color */
  -webkit-user-drag:           auto;    /* https://stackoverflow.com/questions/15034842/what-is-the-webkit-user-drag-css-property */
  -webkit-user-select:         text;    /* Webkit (Chrome all / Safari all) */
          user-select:         text;    /* https://caniuse.com/user-select-none */
}
code, data, kbd, mark, pre, q, samp, var {
  -webkit-tap-highlight-color: HighlightText; /* https://davidwalsh.name/mobile-highlight-color */
  user-select: all; /* https://developer.mozilla.org/en-US/docs/Web/CSS/user-select#all */
  -webkit-user-drag:   auto;    /* https://stackoverflow.com/questions/15034842/what-is-the-webkit-user-drag-css-property */
  -webkit-user-select: all;    /* Webkit (Chrome all / Safari all) */
          user-select: all;    /* https://caniuse.com/user-select-none */
}
pre::selection, code::selection {
  -webkit-tap-highlight-color: Mark; /* https://davidwalsh.name/mobile-highlight-color */
}

body > main
  { -webkit-overflow-scrolling: touch }
body > aside
  { -webkit-transform: translatez(0) }
body > footer
  { -webkit-transform: translatez(0) }
/* https://ferdychristant.com/the-world-s-most-overlooked-web-optimization-for-ios-d88c7517d520 */
body > footer
  { -webkit-transform: translatez(0) }

a
  { -webkit-touch-callout: default }


/* CSS3 Lists
 * https://drafts.csswg.org/css-lists-3
 * Styling lists - https://developer.mozilla.org/en-US/docs/Learn/CSS/Styling_text/Styling_lists
 */
dl, ol, ul, li, dt, dd {
  /* display: list-item; */
  list-style-position: inside;
}
dl dl, ol ol, ol ul, ul ol, ul ul {
  display: inherit;
  display: list-item;
  display: block;
  counter-reset: ordered 0 unordered 0;
}
dl, ol, ul { }
aside dl, aside ol, aside ul, aside dt, aside dd, aside li,
footer dl, footer ol, footer ul, footer dt, footer dd, footer li
  { background: inherit }
dl {}
/* https://developer.mozilla.org/en-US/docs/Web/CSS/counters */
ol {
  /* list-style: ordered; */
  /* counter-reset: ordered 0; */
  /* counter-set: ordered 1; */
}
ul {
  list-style: unordered;
  list-style-type: revert;
}
/*
  - https://css-tricks.com/everything-you-need-to-know-about-the-gap-after-the-list-marker
*/
::marker {
  color: orange;
}
ol > li::marker {
  content: counters(ordered, '.');
}
summary::marker { content: '🔴' }
dd, dt, li
  { background-color: Canvas }
dt { }
dd { }
li { }
li li { }
ol > li, ul > li {}
ol > li
  { counter-increment: ordered }
ul > li {}
ol > li::before,
ul > li::before {
  width: 1ch;
  display: inline-block;
  margin-inline-end: 0.6182ch;
}
ol > li::before
  { content: '\232A' }
ul > li::before { }

/**** COUNTERS *******
  - https://w3.org/TR/predefined-counter-styles/
  - https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style
  - Example Demo - https://mdn.github.io/css-examples/counter-style-demo
*/
@counter-style example {
  pad: 'x'; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/pad */
  suffix: ') '; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/suffix */
  prefix: '»'; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/prefix */
  system: fixed;                  /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/system */
  range: 1 1, 3 3, 5 5; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/range */
  negative: '[' ']'; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/negative */
  speak-as: example; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/speak-as */
  fallback: upper-alpha;          /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/fallback */
  symbols: "\24B6""\24B7""\24B8"; /* https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style/symbols */
}
/* ... */

